changed redirect to tinchev.net

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://xyz-r-d.github.io/xrcnet/</title>
-<meta http-equiv="refresh" content="0; URL=https://xyz-r-d.github.io/xrcnet/">
-<link rel="canonical" href="https://xyz-r-d.github.io/xrcnet/">
+<title>Redirecting to https://tinchev.net/</title>
+<meta http-equiv="refresh" content="0; URL=https://tinchev.net/">
+<link rel="canonical" href="https://tinchev.net/">
